fix: my wallet spacing

--- a/frontend/src/components/Navigation/MyWalletButton/Dropdown/dropdown.scss
+++ b/frontend/src/components/Navigation/MyWalletButton/Dropdown/dropdown.scss
@@ -7,7 +7,7 @@
 	right: 0;
 	border-radius: 0px 0px 12px 12px;
 	box-shadow: $box-shadow;
-	padding: em(26) em(11) em(11);
+	padding: em(26) em(16) em(16);
 	background: $clr-white;
 	min-width: rem(233);
 	border: border();
